feat: Feud Story Scripting — booker-controlled match arc system (#482)
* feat: Feud Story Scripting — booker-controlled match arc system

Adds FeudScript and FeudScriptBeat domain entities that let a booker
pre-script the full arc of a feud: match sequence (Cage, Ladder,
Casket, etc.), winner control per beat (BOOKER_PICKS / AI_PICKS /
SYSTEM_ROLL), and a culminating blowoff with a PLE cap. The arc length
is expressed as SHORT (1 PLE), MEDIUM (2 PLEs), or LONG (3 PLEs) via
the new FeudLength enum.

- Domain: FeudScript, FeudScriptBeat + repositories, 3 status enums,
  FeudLength enum, Flyway migrations H2 V138 / MySQL V107
- Service: FeudScriptService — createFromWizard auto-creates the
  underlying Rivalry or MultiWrestlerFeud; addBeat enforces the PLE
  cap and creates ShowSegmentReservation(FEUD_BLOWOFF) for PLE beats
- AI integration: ShowPlanningContextDTO gains upcomingScriptedBeats;
  ShowPlanningService populates them; ShowPlanningPromptBuilder emits a
  "Pre-Scripted Match Slots" section so the AI honours booker intent
- UI: FeudScriptWizardDialog (3-step: wrestlers → arc name + length →
  beats editor); Story Arc button added to RivalryListView
- GameSettingService: getMaxPleFeudAppearances / setMaxPleFeudAppearances
- Updated ShowFacade to expose FeudScriptService; fixed all tests that
  construct ShowFacade directly (ShowDetailViewTest, ShowPlanningViewTest,
  RivalryListViewTest)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PSxnmqb2nhiVia6SMZ5UCk

* fix: add missing FeudScriptService mock in ShowPlanningServiceTest; restore docs YAML

- ShowPlanningServiceTest was missing @Mock for FeudScriptService, causing
  NullPointerException in all 4 getShowPlanningContext tests
- docs/site/index.md frontmatter had its indentation stripped by the
  pre-existing Spotless run, breaking the VitePress build; restored

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.